--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/base": "^5.0.0-beta.58",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
