--- a/package.json
+++ b/package.json
@@ -11,19 +11,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/base": "^5.0.0-beta.58",
-    "file-loader": "^6.2.0",
-    "framer-motion": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "tailwindcss-animated": "^1.1.2",
-    "url-loader": "^4.1.1",
-    "vite-plugin-commonjs": "^0.10.3"
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
