--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "redirects": [
-    { "source": "/about", "destination": "/about" },
-    { "source": "/home", "destination": "/home" },
-    { "source": "/art", "destination": "/art" }
-  ]
+  "routes": [{ "src": "/[^.]+", "destination": "/" }]
 }
